test/classes/delete-free/lifetimes/yy.good
yy.chpl:8: In function 'bar1':
yy.chpl:10: error: Reference to scoped variable cannot be returned
yy.chpl:9: note: consider scope of y
yy.chpl:13: In function 'bar2':
yy.chpl:15: error: Reference to scoped variable cannot be returned
yy.chpl:14: note: consider scope of y
